--- a/loginSignin.html
+++ b/loginSignin.html
@@ -32,25 +32,10 @@
         default is 5  -->
          <nav class="nav-box">
             <input class="search" placeholder="search">
-            <a class="signin" href="login.html">Sign in</a>
-            <a class="register" href="register.html">Register</a>
-            <select> 
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-            </select>
+            <a class="signin" href="loginSignin.html">Sign in</a>
+            <a class="signin" href="Signup.html">Sign up</a>
+            <a class="signout" href="logout.html">Log out</a>
+            
             <button class= "button" type="submit">Submit</button>
         </nav>
     </header>
