placed the logo and nav bar absolute to the header and resized the modal.

--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
     <!-- animating the header -->
     <div class="pulse">
     </div>
-    <!-- nav box has search box, signin or register for the first time which leads to a different page
-    and  option dropdown to select how many articles should be displayed from 1-15
-    default is 5  -->
-     <nav class="nav-box">
-        <div class="logo"> 
+    <div class="logo"> 
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="News Breeze">
             </a> 
         </div>
+    <!-- nav box has search box, signin or register for the first time which leads to a different page
+    and  option dropdown to select how many articles should be displayed from 1-15
+    default is 5  -->
+     <nav class="nav-box">
+        
         <input class="search" id="search" placeholder="search">
         <a class="signin" href="loginSignin.html">Sign in</a>
-        <a class="signin" href="Signup.html">Sign up</a>
+        <a class="signup" href="Signup.html">Sign up</a>
         <a class="signout" href="logout.html">Log out</a>
         
         <button class= "button" id="submit" type="submit">Submit</button>
@@ -91,7 +92,7 @@
 <!-- footer is same as header -->
 <footer>
         <!-- Displays the logo in the front page -->
-        <div class="logo"> 
+        <div class="logo1"> 
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="News Breeze">
             </a> 
