--- a/loginSignin.html
+++ b/loginSignin.html
@@ -33,7 +33,7 @@
             </div>
             <input class="search" id="search" placeholder="search">
             <a class="signin" href="loginSignin.html">Sign in</a>
-            <a class="signin" href="Signup.html">Sign up</a>
+            <a class="signup" href="Signup.html">Sign up</a>
             <a class="signout" href="logout.html">Log out</a>
             
             <button class= "button" id="submit" type="submit">Submit</button>
@@ -71,7 +71,7 @@
     <!-- footer is same as header -->
 <footer>
         <!-- Displays the logo in the front page -->
-        <div class="logo"> 
+        <div class="logo1"> 
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="News Breeze">
             </a> 
