--- a/logout.html
+++ b/logout.html
@@ -44,7 +44,7 @@
     <!-- footer is same as header -->
 <footer>
     <!-- Displays the logo in the front page -->
-    <div class="logo"> 
+    <div class="logo1"> 
         <a href="index.html">
             <img src="assets/images/logo.png" alt="News Breeze">
         </a> 
