adde sign up page.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <nav class="nav-box">
         
         <input class="search" id="search" placeholder="search">
-        <a class="signin" href="loginSignin.html">Sign in</a>
+        <a class="signin" href="login.html">Sign in</a>
         <a class="signup" href="Signup.html">Sign up</a>
         <a class="signout" href="logout.html">Log out</a>
         
