--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
                 </a> 
             </div>
             <input class="search" id="search" placeholder="search">
-            <a class="signin" href="loginSignin.html">Sign in</a>
+            <a class="signin" href="login.html">Sign in</a>
             <a class="signup" href="Signup.html">Sign up</a>
             <a class="signout" href="logout.html">Log out</a>
             
@@ -48,10 +48,6 @@
         <label class="psw"><b>Password</b></label><br>
         <input id="txtPassword" type="password" placeholder="Password"><br>
 
-        <button id="btnLogin" class="btn btn-action">
-            Log In
-        </button>
-
         <button id="btnSignup" class="btn btn-secondary">
             Sign Up
         </button>
@@ -63,11 +59,11 @@
     </div>
 
 
-    <div id="myDIV">
+    <!-- <div id="myDIV">
         <br>
         <h1 style="padding-left:60px">You are currently not login</h1>
         <br>
-    </div>
+    </div> -->
     <!-- footer is same as header -->
 <footer>
         <!-- Displays the logo in the front page -->
