fixed the login link.

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                 <li class="nav-item active">
                     <a class="nav-link signout" href="logout.html">Logout</a>
                 </li>
-                <li>
-                    <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search">
-                </li>
-                <li>
-                    <button class="btn  my-2 my-sm-0" id="submit" type="submit">Submit</button>
-                </li>
             </ul>
+            <form class="form-inline my-2 my-lg-0 ">
+                <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search">
+            
+                <button class="btn  my-2 my-sm-0" id="submit" type="submit">Submit</button>
+            </form>
+            
         </div>
     </nav>
 </header>
