fixed the login and singup pages.:

--- a/login.html
+++ b/login.html
@@ -80,11 +80,11 @@
     </div>
 
 
-    <!-- <div id="myDIV">
+    <div id="myDIV">
         <br>
         <h1 style="padding-left:60px">You are currently not login</h1>
         <br>
-    </div> -->
+    </div>
     <!-- footer is same as header -->
 <footer>
         <!-- Displays the logo in the front page -->
