fixed the logo to center.

--- a/logout.html
+++ b/logout.html
@@ -38,7 +38,7 @@
 
     <div id="myDIV">
         <br>
-        <h1 style="padding-left:60px">You are currently login</h1>
+        <h1 style="padding-left:60px"></h1>
         <br>
     </div>
     <!-- footer is same as header -->
