--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <img src="assets/images/logo.png" alt="News Breeze">
             </a> 
         </div>
+        <!-- navbar for signin, signout and signup links with search input and submit button -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             
             <button class="navbar-toggler toggle " type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -96,7 +97,7 @@
 
     <!-- footer  -->
     <footer>
-        <!-- Displays the logo in the front page -->
+        <!-- Displays the logo in the footer section and refer to index.html on click -->
         <div class="logo1"> 
             <a href="index.html">
                 <img src="assets/images/logo.png" alt="News Breeze">
@@ -110,8 +111,9 @@
         
     <!-- JavaScript -->
     <script type="text/javascript" src="assets/javascript/moment.js"></script>
-    <!-- Link to Moment.js should go here -->
+    <!-- script to Moment.js  -->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+    <!-- script to firebase -->
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.3.0/firebase-firestore.js"></script>
