--- a/indexES.html
+++ b/indexES.html
@@ -47,7 +47,7 @@
         </header>
         <div class="header-ext">
             <div class="announcement">
-                News Breeze let's you pick the news from specific sites and also share and personalize your favourite articles.
+                NOTICIAS - News Breeze let's you pick the news from specific sites and also share and personalize your favourite articles.
             </div>
         </div>
     </div>
@@ -149,7 +149,7 @@
         //update firestore settings
         //db.setting({timestampsINSnapshots: true});
     </script>
-    <script src="assets/javascript/queryEN.js"></script>
+    <script src="assets/javascript/queryES.js"></script>
     <script type="text/javascript" src="assets/javascript/moment.js"></script>
 </body>
 
