--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link signin" href="login.html">Sign in</a>
+                        <a class="nav-link signin text-white" href="login.html"><strong>Sign in</strong></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link signup" href="Signup.html">Sign up</a>
+                        <a class="nav-link signup text-white" href="Signup.html"><strong>Signup</strong></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link signout" href="logout.html">Logout</a>
+                        <a class="nav-link signout text-white" href="logout.html"><strong>Logout</strong></a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0 ">
                     <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search">
                 
-                    <button class="btn  my-2 my-sm-0" id="submit" type="submit">Submit</button>
+                    <button class="btn  my-2 my-sm-0 text-white" id="submit" type="submit"><strong>Submit</strong></button>
                 </form>
             
             </div>
