--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a class="nav-link signin text-white" href="login.html"><strong>Sign in</strong></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link signup text-white" href="Signup.html"><strong>Signup</strong></a>
+                        <a class="nav-link signup text-white" href="signup.html"><strong>Signup</strong></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link signout text-white" href="logout.html"><strong>Logout</strong></a>
