--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
                         <a class="nav-link signin" href="login.html">Sign in</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link signup" href="Signup.html">Sign up</a>
+                        <a class="nav-link signup" href="signup.html">Sign up</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link signout" href="logout.html">Logout</a>
