--- a/signup.html
+++ b/signup.html
@@ -58,6 +58,7 @@
         <label class="name"><b>Email</b></label><br>
         <input id="txtEmail" type="email" placeholder="Email"><br>
         <label class="psw"><b>Password</b></label><br>
+        <p style="font-size:10px;  margin-bottom:0px;">Minimum 8 characters for the password</p>
         <input id="txtPassword" type="password" placeholder="Password"><br>
         <button id="btnSignup" class="btn btn-secondary">Sign Up</button>
         <button id="btnLogin" class="btn btn-secondary invisible">Log In</button>
