fixed link for share button link.

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                         <a class="nav-link signout text-white" href="logout.html"><strong>Logout</strong></a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0 ">
-                    <input class="form-control mr-sm-2" id="search" type="search" placeholder="Search">
+                <!-- <form class="form-inline my-2 my-lg-0 "> -->
+                    <input id="search" class="form-control mr-sm-2"  type="search" placeholder="Search">
                 
-                    <button class="btn  my-2 my-sm-0 text-white" id="submit" type="submit"><strong>Submit</strong></button>
-                </form>
+                    <button id="submit" class="btn  my-2 my-sm-0 text-white"  type="submit"><strong>Submit</strong></button>
+                <!-- </form> -->
             
             </div>
         </nav>
